# MK7-Revolution

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  build
docs/: FEATURES.md  README.md  TODO.md
include/base/: entries.hpp  features.hpp  game_types.hpp  hooking.hpp  hooks.hpp  menu.hpp  menu_types.hpp  pointers.hpp  settings.hpp  utils.hpp
src/: main.cpp
src/base/: hooking.cpp  menu.cpp  pointers.cpp  settings.cpp  utils.cpp
src/base/entries/item/: item_drop_menu.cpp  item_hang_menu.cpp  item_limiters_menu.cpp  item_rain_menu.cpp  item_rapidfire_menu.cpp  item_wheel_menu.cpp
src/base/entries/kart/: instant_miniturbo_menu.cpp  intangibility_menu.cpp  kart_statuses_menu.cpp
src/base/entries/network/: event_frame_modifier_menu.cpp  friend_info_modifier_menu.cpp  protections_menu.cpp
src/base/features/item/: item_drop.cpp  item_hang.cpp  item_limiters_extra_num.cpp  item_limiters_num.cpp  item_rain.cpp  item_rapidfire_block.cpp  item_rapidfire_execute.cpp  item_wheel_calc.cpp  item_wheel_init.cpp  zero_gravity_shells.cpp
src/base/features/kart/: instant_miniturbo.cpp  intangibility.cpp  kart_statuses.cpp
src/base/features/mode/: drive_during_sync_after.cpp  drive_during_sync_before.cpp  drive_during_sync_bottom_screen.cpp
src/base/features/network/: event_frame_modifier.cpp  friend_info_modifier.cpp  invisibility.cpp  kart_warp.cpp  protections_item.cpp  protections_system_info.cpp
src/base/hooks/Item/: Item_GetExtraItemNum.cpp  Item_GetExtraItemNum_0x8.cpp  Item_GetNumInItemType.cpp  Item_GetNumInItemType_0x8.cpp
(+14 files in other folders)
